--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#projects" class="main-btn">View my work</a>
             <div class="socila-icons">
                 <a href="https://www.linkedin.com/in/kareem-abdallah-a6b9b9231" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.facebook.com/kareem.abdallah.54" target="_blank"><i class="fab fa-facebook-square"></i></a>
             <a href="https://github.com/Kareem2003" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://wa.me/+201090992653" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
@@ -150,7 +150,7 @@
          <p class="footer-title">Copyrights @ <span>Kareem Abdallah</span></p>
          <div class="socila-icons">
             <a href="https://www.linkedin.com/in/kareem-abdallah-a6b9b9231" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.facebook.com/kareem.abdallah.54" target="_blank"><i class="fab fa-facebook-square"></i></a>
             <a href="https://github.com/Kareem2003" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://wa.me/+201090992653" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
