--- a/index.html
+++ b/index.html
@@ -1,159 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/Logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kareem Abdallah</title>
-    <script src="./animation.js"></script>
-</head>
-<body>
-    
-    <header>
-        <a href="#" class="logo">Kareem</a>
-        <nav class="navigation">
-            <a href="#services">Serves</a>
-            <a href="#projects">Project</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
-
-
-    <section class="main">
-        <div>
-            <h2>Hello, I'm Kareem<br><span>SoftWare Engeneering</span></h2>
-            <h3>I code as it Fun</h3>
-            <a href="#projects" class="main-btn">View my work</a>
-            <div class="socila-icons">
-                <a href="https://www.linkedin.com/in/kareem-abdallah-a6b9b9231" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/kareem.abdallah.54" target="_blank"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://github.com/Kareem2003" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://wa.me/+201090992653" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            </div>
-        </div>
-    </section>
-
-    <section class="cards" id="services">
-       <h2 class="title">Serveses</h2>
-        <div class="content">
-            <div class="card">
-                <div class="icon">
-                   <i class="fas fa-school"></i>
-                </div>
-                <div class="info">
-                   <h3>School education</h3>
-                   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores praesentium minus deserunt maxime, iste expedita laboriosam voluptatibus ipsa deleniti, rem accusantium assumenda et architecto tempore? Labore rerum rem iste error?</p>
-                </div>
-            </div>
-            <div class="card">
-               <div class="icon">
-                   <i class="fas fa-school"></i>
-               </div>
-                <div class="info">
-                   <h3>School education</h3>
-                   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores praesentium minus deserunt maxime, iste expedita laboriosam voluptatibus ipsa deleniti, rem accusantium assumenda et architecto tempore? Labore rerum rem iste error?</p>
-               </div>
-           </div>
-            <div class="card">
-                <div class="icon">
-                   <i class="fas fa-school"></i>
-               </div>
-               <div class="info">
-                   <h3>School education</h3>
-                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, quas? Asperiores iste dolores necessitatibus minima deserunt. Omnis ipsum assumenda quidem, quia repellendus neque voluptas, doloremque harum, excepturi fugiat illo a.</p>
-               </div>
-            </div>                
-        </div>
-    </section>
-
-    <section class="projects" id="projects">
-        <h2 class="title">Project</h2>
-         <div class="content">
-             <div class="projects-card">
-                 <div class="projects-images">
-                    <img src="images/pexels-xxss.jpg" />
-                 </div>
-                 <div class="projects-info">
-                    <p class="projects-catagory">Code Writing & Problem Solving</p>
-                    <strong class="projects-title">
-                        <span>Dev Books</span>
-                        <a href="#" class="more-details">More details</a>
-                    </strong>
-                 </div>
-             </div>
-            <div class="projects-card">
-                <div class="projects-images">
-                   <img src="images/pexels-xxss.jpg" />
-                </div>
-                <div class="projects-info">
-                   <p class="projects-catagory">Code Writing & Problem Solving</p>
-                   <strong class="projects-title">
-                       <span>Dev Books</span>
-                       <a href="#" class="more-details">More details</a>
-                   </strong>
-                </div>
-            </div>
-            <div class="projects-card">
-                <div class="projects-images">
-                   <img src="images/background-crob.jpg" />
-                </div>
-                <div class="projects-info">
-                   <p class="projects-catagory">Code Writing & Problem Solving</p>
-                   <strong class="projects-title">
-                       <span>Dev Books</span>
-                       <a href="#" class="more-details">More details</a>
-                   </strong>
-                </div>
-            </div>
-            <div class="projects-card">
-                <div class="projects-images">
-                   <img src="images/Scenic.png" />
-                </div>
-                <div class="projects-info">
-                   <p class="projects-catagory">Code Writing & Problem Solving</p>
-                   <strong class="projects-title">
-                       <span>Dev Books</span>
-                       <a href="#" class="more-details">More details</a>
-                   </strong>
-                </div>
-            </div>
-         </div>
-     </section>
-
-     <section class="cards contact" id="contact">
-        <h2 class="title">Let's work together</h2>
-        <div class="content">
-            <div class="card">
-                <div class="icon">
-                   <i class="fas fa-phone"></i>
-                </div>
-                <div class="info">
-                   <h3>Phone</h3>
-                   <p>+201090992653</p>
-                </div>
-            </div>
-            <div class="card">
-               <div class="icon">
-                   <i class="fas fa-envelope"></i>
-               </div>
-                <div class="info">
-                   <h3>Email</h3>
-                   <p>kareemabdallah789@outlook.com</p>
-               </div>
-           </div>
-        </div>   
-     </section>
-
-     <footer class="footer">
-         <p class="footer-title">Copyrights @ <span>Kareem Abdallah</span></p>
-         <div class="socila-icons">
-            <a href="https://www.linkedin.com/in/kareem-abdallah-a6b9b9231" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/kareem.abdallah.54" target="_blank"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://github.com/Kareem2003" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://wa.me/+201090992653" target="_blank"><i class="fab fa-whatsapp"></i></a>
-        </div>
-     </footer>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
